2004-11-03  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/gdb, plugins/debug-manager: Applied debugger patch
	from Bosik, Pavol <pavol.bosik@radiantsystems.com>

2004-11-03  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/cvs-plugin/*: Mess up with cvs and lost some of 
	my cvs-plugin files...
	I hope I have rescued everything possible.
	
	* Naba: Could you please fix sample1 because I messed it up to 
	but there should be a histroy of this directory we should commit

2004-10-22  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/cvs-plugin/cvs-execute.[ch]: Add basic command execute infrastructure
	* plugins/cvs-plugin/plugin.c, /plugins/cvs-plugin/anjuta-cvs-plugin.glade:
	Added preferences dialog (not yet complete)

2004-10-22  Johannes Schmid <jhs@cvs.gnome.org>
	
	* global-tags/Makefile.am
	mime/Makefile.am
	
	Some fixes in build process from Alexey Rusakov <ktirf@users.sf.net>
	
	* template/xmltemplate.[ch]
	template/xmlstrings.[ch]
	template/autotools.[ch] removed
	template/prj_template.[ch] removed
	template/lang_template.[ch] removed
	template/lib_template.[ch] removed
	template/Makefile.am adjusted
	template/dtds/lang.dtd removed	
	template/dtds/lib.dtd removed
	template/dtds/prj.dtd removed
	template/dtds/autotools.dtd removed
	data/template/lib/* removed
	data/template/language/* removed
	data/template/library/* removed
	data/template/project/* removed	
	date/template/Makefile.am adjusted
	
	Remove everything except text-templates to replace hardcoded 
	Edit->Insert texts with dynamic loaded.

	* plugins/cvs-plugin/plugin.[ch]
	plugins/cvs-actions.[ch]
	plugins/Makefile.am
	plugins/cvs-plugin/Makefile.am
	plugins/cvs-plugin/anjuta-cvs-plugin.ui
	plugins/cvs-plugin/anjuta-cvs-plugin.glade
	plugins/cvs-plugin/anjuta-cvs.plugin.in
	
	Added initial cvs-plugin code
		
2004-10-21  Naba Kumar  <naba@gnome.org>
	
	* libanjuta/anjuta-plugin.c,
	plugins/build-basic-autotools/build-basic-autotools.c,
	plugins/debugger/plugin.c,
	plugins/devhelp/plugin.c,