@@ -104,13 +104,6 @@ are mainly two ways a plugin could register its preferences in Anjuta.
 @props_session: 
 @props: 
 
-<!-- ##### SIGNAL AnjutaPreferences::changed ##### -->
-<para>
-
-</para>
-
-@anjutapreferences: the object which received the signal.
-
 <!-- ##### USER_FUNCTION AnjutaPreferencesCallback ##### -->
 <para>
 
@@ -263,4 +256,11 @@ are mainly two ways a plugin could register its preferences in Anjuta.
 
 @pr: 
 
+
+<!-- ##### SIGNAL AnjutaPreferences::changed ##### -->
+<para>
+
+</para>
+
+@anjutapreferences: the object which received the signal.
 
